# cpnx

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  versions.json
.agents/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release.yml
0.3/: 404.html  index.html  index.md  llms-full.txt  llms.txt  objects.inv  sitemap.xml
0.3/reference/core/: index.html  index.md
0.3/reference/places/: index.html  index.md
0.3/reference/tokens/: index.html  index.md
0.3/reference/transitions/: index.html  index.md
0.3/reference/visualization/: index.html  index.md
0.3/search/: search_index.json
0.4/: 404.html  index.html  index.md  llms-full.txt  objects.inv  sitemap.xml
0.4/reference/core/: index.html  index.md
0.4/reference/places/: index.html  index.md
0.4/reference/tokens/: index.html
0.4/reference/transitions/: index.html  index.md
0.4/reference/visualization/: index.html
0.4/search/: search_index.json
benchmarks/: README.md  _driver.py  bench_cafe_concurrency.py  bench_cafe_throughput.py  bench_drain_ab.py  bench_enablement.py  bench_station_costs.py  bench_subnet.py  certification_hit_rate.py  concurrency_cafe.py  profile_cafe.py
benchmarks/cafe/: __init__.py  actions.py  inscriptions.py  net.py  places.py  support.py  transitions.py
benchmarks/cafe/stations/: __init__.py  batch_triage.py  cold_brew.py  cupping.py  decaf.py  eighty_six.py  knock_box.py  pastry_case.py  specials_board.py
docs/: cafe.md  cpn-compliance-fixes.md  cpn-theory-audit.md  index.md
docs/adr/: 0001-combinatorial-binding-search.md  0002-guard-type-checking-scope.md  0003-inline-execution-and-string-removal.md  0004-arc-selection-key-filter.md
docs/reference/: core.md  places.md  tokens.md  transitions.md  visualization.md
examples/: api_rate_limit.py  etl_pipeline.py  gpu_pipeline.py
overrides/: main.html
src/cpnx/: __init__.py  certification.py  engine.py  places.py  sandbox.py  tokens.py  transitions.py  visualization.py
src/petriq/: __init__.py  engine.py  places.py  sandbox.py  tokens.py  transitions.py  visualization.py
tests/: test_action_timeout.py  test_backpressure.py  test_batch.py  test_binding_search.py  test_cafe_stations.py  test_certification_acceptance.py  test_certification_rejection.py  test_certification_termination.py  test_certification_transitive.py  test_chronology.py  test_color_sets.py  test_concurrency_cafe.py  test_concurrent.py  test_deep_review_fixes.py  test_encapsulation.py  test_engine.py  test_engine_refactor.py  test_error.py  test_error_redesign.py  test_guard_return_type.py  test_guards.py  test_inline_dispatch_equivalence.py  test_input_arc_expression.py  test_input_arc_selection.py  test_key_index.py  test_optimizations.py  test_place_retrieval_fastpath.py  test_places.py  test_priority.py  test_public_api.py  test_pure_evaluation.py  test_resource.py  test_routing.py  test_seeded_determinism.py  test_selection_failure_signal.py  test_sink_place.py  test_state_machine.py  test_subnet.py  test_threshold.py  test_token_store.py  (+2 more)
