[project]
name = "petriq"
version = "0.1.0"
description = "Lightweight Petri net executor for concurrent Python pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
keywords = ["petri-net", "pipeline", "concurrency", "orchestration", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/philgresh/petriq"
Documentation = "https://github.com/philgresh/petriq#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
