[project]
name = "cpnx"
version = "0.3.1"
description = "Coloured Petri Net executor for concurrent Python pipelines"
authors = [
  { name = "Phil Gresham", email = "phil@gresham.dev" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []
keywords = ["petri-net", "coloured-petri-net", "colored-petri-net", "cpn", "pipeline", "concurrency", "orchestration", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "radon>=6.0.1",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26",
    "mike>=2.1",
    "mkdocs-include-markdown-plugin>=6.2",
    "mkdocs-llmstxt>=0.5",
    "ruff>=0.1.0",  # used by mkdocstrings to format rendered signatures
]

[project.urls]
Repository = "https://github.com/philgresh/cpnx"
Documentation = "https://philgresh.github.io/cpnx/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
